checkpatch-results/home/fedora/lkml-analysis/lkml/1/0000324768.e10aeb39c1d3567f1906ca36162c977c1b7c0672
CHECK:INVALID_UTF8: Invalid UTF-8, patch and commit message should be encoded in UTF-8
#40: 
‘pgd_mop_up_pmds’:
^

WARNING:USE_RELATIVE_PATH: use relative pathname instead of absolute in changelog text
#41: 
/home/lkernel/src/linux-2.6.24-mm1/arch/x86/mm/pgtable_32.c:302: 

CHECK:INVALID_UTF8: Invalid UTF-8, patch and commit message should be encoded in UTF-8
#42: 
warning: passing argument 1 of ‘pmd_free’ from incompatible pointer type
                               ^

WARNING:USE_RELATIVE_PATH: use relative pathname instead of absolute in changelog text
#43: 
/home/lkernel/src/linux-2.6.24-mm1/arch/x86/mm/pgtable_32.c:302: error: 

CHECK:INVALID_UTF8: Invalid UTF-8, patch and commit message should be encoded in UTF-8
#44: 
too few arguments to function ‘pmd_free’
                              ^

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000324768.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 total: 0 errors, 2 warnings, 3 checks, 40 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000324768.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
